# Rico-Theta-S-ROS-Node

./: README.md
omnicam/: CMakeLists.txt  package.xml  readme.txt
omnicam/Results_OcamCalib/: calib_results_left.txt  calib_results_right.txt
omnicam/msg/: Omni.msg
omnicam/omni_cam_launch/: omni_cam.launch
omnicam/scripts/: ocamFunctions.py  publisher.py
