<?xml version="1.0"?>
<package format="2">
  <name>omnicam</name>
  <version>0.0.0</version>
  <description>The omnicam package</description>
  <maintainer email="balasubramanyam.evani@gmail.com">Balasubramanyam Evani</maintainer>


  <license>MIT</license>


  <author email="balasubramanyam.evani@gmail.com">Balasubramanyam Evani</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>

  <exec_depend>message_runtime</exec_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>

  
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
